--- a/test/index.html
+++ b/test/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html style="width:100%;height:100%;">
     <head>
         <meta charset="UTF-8" />
         <title>Hello!</title>
     </head>
-    <body>
+    <body style="width:100%;height:100%;">
         <!-- Main -->
         <script src="../dist/bundle.js"></script>
     </body>
