--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,6 @@
     </head>
     <body style="width:100%;height:100%;">
         <!-- Main -->
-        <script src="../dist/bundle.js"></script>
+        <script src="../dist/test/hello.js"></script>
     </body>
 </html>
