--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Hello!</title>
     </head>
-    <body style="width:200%;height:200%;">
+    <body style="width:200%;height:200%;background:#f00;">
         <!-- Main -->
         <script src="bundle.js"></script>
     </body>
